Alignment fix proj

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -647,7 +647,6 @@ footer.sticky-bottom {
   .grid-sizer,
   .grid-item {
     width: 250px;
-    height: 167px;
     margin-bottom: 10px;
   }
 
